<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="te"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_600"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".ui.UserLogin">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/besammen_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:backgroundTint="@color/white"
            android:hint="@string/login_email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:backgroundTint="@color/white"
            android:hint="@string/login_password" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="299dp"
            android:layout_height="69dp"
            android:layout_margin="6dp"
            android:backgroundTint="@color/green_200"
            android:text="@string/login_button"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:gravity="center"
        android:text="@string/forgot_password"

        android:textSize="12sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/create_user"
        android:layout_width="299dp"
        android:layout_height="69dp"
        android:layout_margin="6dp"
        android:backgroundTint="@color/green_200"
        android:text="@string/create_user"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/be"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sammen"
            android:textColor="@color/black" />
    </LinearLayout>


</LinearLayout>

